--- a/FourthTask/FourthTask.DomainModels/FourthTask.DomainModels.csproj
+++ b/FourthTask/FourthTask.DomainModels/FourthTask.DomainModels.csproj
@@ -40,9 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomerDTO.cs" />
-    <Compile Include="CustomerListDTO.cs" />
-    <Compile Include="OrderDetailsDTO.cs" />
+    <Compile Include="Customer.cs" />
+    <Compile Include="CustomerListRow.cs" />
+    <Compile Include="Order.cs" />
+    <Compile Include="OrderDetails.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
