--- a/FourthTask/FourthTask.Mvc/FourthTask.Mvc.csproj
+++ b/FourthTask/FourthTask.Mvc/FourthTask.Mvc.csproj
@@ -178,7 +178,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\Customer.cshtml" />
+    <Content Include="Views\Home\CustomerDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
