--- a/FourthTask/FourthTask.Mvc/FourthTask.Mvc.csproj
+++ b/FourthTask/FourthTask.Mvc/FourthTask.Mvc.csproj
@@ -149,23 +149,23 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\bootstrap.css" />
-    <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\vendor\bootstrap\bootstrap.css" />
+    <Content Include="Content\vendor\bootstrap\bootstrap.min.css" />
     <Content Include="Content\Images\user-icon.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="Scripts\bootstrap.js" />
-    <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\vendor\bootstrap\bootstrap.js" />
+    <Content Include="Scripts\vendor\bootstrap\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Scripts\customer-details.js" />
     <Content Include="Scripts\customers-grid.js" />
-    <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Scripts\vue-resource.js" />
-    <Content Include="Scripts\vue.js" />
+    <Content Include="Scripts\vendor\modernizr\modernizr-2.6.2.js" />
+    <Content Include="Scripts\vendor\vue\vue-resource.js" />
+    <Content Include="Scripts\vendor\vue\vue.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
